--- a/.env
+++ b/.env
@@ -1,22 +1,22 @@
-CNX_STR_REMOTE="mongodb+srv://root:qFB1FPNBMAS8xKjL@cluster0.pydeaus.mongodb.net/GoRi"
-CNX_STR_LOCAL="mongodb://localhost:27017"
-USER_ADMIN_MDB_LOCAL="admin"
-PASS_ADMIN_MDB_LOCAL="aX4vvHMU9y2U!*uC4Xj!#9aG7Wdqr6"
-DB_NAME="Shop_GGR"
-JWT_SECRET="sBEaG4f27NPymjWxdu3H9iDMvlXT8CQ6"
-SALT="10"
-MODE="prod"
-PORT="8080"
-COLLECTION_ADMIN="Admins"
-COLLECTION_USERS="Users"
-COLLECTION_ORDERS="Orders"
-COLLECTION_PRODUCTS="Products"
-COLLECTION_SHOPPING_CARTS="ShoppingCarts"
-FILE_ADMIN="./public/files/admin.txt"
-FILE_USERS="./public/files/users.txt"
-FILE_CARTS="./public/files/carts.txt"
-FILE_PRODUCTS="./public/files/products.txt"
-FILE_SHOPPING_CARTS="./public/files/shopping_carts.txt"
-FILE_ORDERS="./public/files/orders.txt"
-ADMIN_EMAIL="riveragovanni305@gmail.com"
-PASS_EMAIL="fhauueygrmlvrmso"
+CNX_STR_REMOTE=
+CNX_STR_LOCAL=
+USER_ADMIN_MDB_LOCAL=
+PASS_ADMIN_MDB_LOCAL=
+DB_NAME=
+JWT_SECRET=
+SALT=
+MODE=
+PORT=
+COLLECTION_ADMIN=
+COLLECTION_USERS=
+COLLECTION_ORDERS=
+COLLECTION_PRODUCTS=
+COLLECTION_SHOPPING_CARTS=
+FILE_ADMIN=
+FILE_USERS=
+FILE_CARTS=
+FILE_PRODUCTS=
+FILE_SHOPPING_CARTS=
+FILE_ORDERS=
+ADMIN_EMAIL=
+PASS_EMAIL=
